--- a/算法心得.md
+++ b/算法心得.md
@@ -1,15 +1,16 @@
 ---
-title: java 算法心得
+title: 算法心得
 date: 2021-01-09 10:52:34
 tags:
 - java
+- c++
 - 算法
 
 categories:
 - 数据结构
 ---
 
-# java 算法心得
+# 算法心得
 
 ## 选择排序与冒泡排序之间的关系
 
@@ -80,3 +81,22 @@ categories:
 1. 用作去重
 2. 作为缓存
 3. 映射查找遍历。
+
+
+## 尾递归
+
+尾递归说白了就是，在函数的后面直接return 自己，且没有任何的计算操作。举个例子：
+
+```java
+
+public int recursion(int a){
+    if xxx{
+        return 1;
+    }else{
+        return recursion(a*x);
+    }
+}
+```
+
+> 我们都知道递归会将函数压栈，不仅消耗大量的时间，而且有很大的不确定性，稳定性无法保证。
+> 尾递归，则是编译器自动的将不重复调用栈，而是直接覆盖函数栈，使空间复杂度从O(n)变成了O(1)
