修改锁的相关博客

--- a/锁的深入理解.md
+++ b/锁的深入理解.md
@@ -1,10 +1,11 @@
 ---
-title: java锁的深入理解
+title: 锁的深入理解
 date: 2019-04-21 20:12:16
 categories:
 - java
 tags:
-- java多线程
+- java
+- 多线程
 ---
 
 # java锁的深入理解
@@ -16,28 +17,14 @@ tags:
 这个锁相当于一个递归锁，如果上层代码已经获得到了锁的所有权，那么他的子代码也直接拥有所有权，重入锁的常见有
 
 Lock锁(轻量级锁) 和 synchronize(重量级锁)
-
+> synchronize是根据当前java线程数量，从轻量级锁逐渐变成重量级锁的过程，且此过程不可逆。
 ## 读写锁
 
-相比[Java中的锁(Locks in Java)](http://ifeve.com/locks/)里Lock实现，读写锁更复杂一些。假设你的程序中涉及到对一些共享资源的读和写操作，且写操作没有读操作那么频繁。在没有写操作的时候**，两个线程同时读一个资源没有任何问题，所以应该允许多个线程能在同时读取共享资源。但是如果有一个线程想去写这些共享资源，就不应该再有其它线程对该资源进行读或写**（译者注：也就是说：读-读能共存，读-写不能共存，写-写不能共存）。这就需要一个读/写锁来解决这个问题。Java5在java.util.concurrent包中已经包含了读写锁。尽管如此，我们还是应该了解其实现背后的原理。
+相比[Java中的锁(Locks in Java)](http://ifeve.com/locks/)里Lock实现，读写锁更复杂一些。假设你的程序中涉及到对一些共享资源的读和写操作，且写操作没有读操作那么频繁。在没有写操作的时候，两个线程同时读一个资源没有任何问题，所以应该允许多个线程能在同时读取共享资源。但是如果有一个线程想去写这些共享资源，就不应该再有其它线程对该资源进行读或写（译者注：也就是说：读-读能共存，读-写不能共存，写-写不能共存）。这就需要一个读/写锁来解决这个问题。Java5在java.util.concurrent包中已经包含了读写锁。尽管如此，我们还是应该了解其实现背后的原理。
 
 这里用一段实例来解释读写锁
 
 ```java
-package com.lock;
-
-import java.util.HashMap;
-import java.util.Map;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
-import java.util.concurrent.locks.ReentrantReadWriteLock;
-
-/**
- * Created with IntelliJ IDEA.
- * User: WHOAMI
- * Time: 2019-2019/4/21-20:46
- * Description: :/TODO_
- */
 public class TestMain {
     public static void main(String args[]){
         new Thread(new Runnable() {
@@ -124,13 +111,15 @@ class Cache {
 
 这里只是一个描述，乐观锁和CAS无锁机制，他的性能比悲观锁高，因为他并没有利用锁，更不会有死锁问题。
 
+实现方式：比如在 mysql字段里面添加一个version字段，每次更新字段时都会首先检验version字段和当前版本的匹配问题，就可以做到类似行级锁的效果。
+
 ## 悲观锁
 
 总是假设最坏的情况，每次取数据时都认为其他线程会修改，所以都会加锁（读锁、写锁、行锁等），当其他线程想要访问数据时，都需要阻塞挂起。可以依靠数据库实现，如行锁、读锁和写锁等，都是在操作之前加锁，在Java中，synchronized的思想也是悲观锁。
 
 
 
-## CAS锁
+## CAS锁(暂时不研究)
 
 （1）与锁相比，使用比较交换compare and Swap（下文简称CAS）会使程序看起来更加复杂一些。但由于其非阻塞性，它对死锁问题天生免疫，并且，线程间的相互影响也远远比基于锁的方式要小。更为重要的是，使用无锁的方式完全没有锁竞争带来的系统开销，也没有线程间频繁调度带来的开销，因此，它要比基于锁的方式拥有更优越的性能。 
 
