添加回溯算法心得

--- a/算法心得.md
+++ b/算法心得.md
@@ -23,7 +23,7 @@ categories:
 
 /**
     * 功能描述: 选择排序算法  --> int[] 是引用传递，即使不return input的指也会改变
-    * @Param: [input] 
+    * @Param: [input]
     * @Return: int[]
     * @Author: ADROITWOLF
     * @Date: 2021/2/27 21:33
@@ -32,7 +32,7 @@ categories:
         int min = 0;
         for (int i =0;i<input.length;i++ ){
             min = i;
-            for(int j = i+1;j<input.length;j++){ 
+            for(int j = i+1;j<input.length;j++){
                 min = input[min] > input[j] ? j:min;
             }
             if(i != min){ //说明最小值已经是那啥了
@@ -100,3 +100,39 @@ public int recursion(int a){
 
 > 我们都知道递归会将函数压栈，不仅消耗大量的时间，而且有很大的不确定性，稳定性无法保证。
 > 尾递归，则是编译器自动的将不重复调用栈，而是直接覆盖函数栈，使空间复杂度从O(n)变成了O(1)
+
+## 递归和迭代的区别
+
+首先这里一定要忘记迭代就是要比递归牛逼的想法，我记得我们老师说，尽量不要用递归，**这纯属瞎扯淡误人子弟。**
+
+递归存在就有他的必要性，经过查阅发现，递归在用编译语言编写的时候更加的方便。对，就是方便！这是递归的非常大的优势。
+
+并且只要能递归，就一定能转化成迭代，无非就是压栈的操作让我们手动模拟了而已。
+
+
+
+## 求子集算法(回溯)
+
+此题是leetcode 1886。
+
+该题说白了，就是需要弄出一个决策树来，就像下面这样：
+
+[![g70aEq.png](https://z3.ax1x.com/2021/05/21/g70aEq.png)](https://imgtu.com/i/g70aEq)
+
+我们在遍历每个元素的时候都会面临着选和不选两个选项，这样我们就可以把子集就可以全部求出来了，具体代码如下(伪代码):
+
+
+```java
+
+private int[][] res = new int [nums.length][nums.length];
+
+public dfs(int [] nums,int index,int [] temp){
+  if(index == nums.length){
+    // 把当前的集合添加到结果中
+    res.add(temp);
+  }
+
+  dfs(nums,index+1,temp.add(nums[index])); // 选择当前元素
+  dfs(nums,index+1,temp); // 不选择当前元素
+}
+```
