c语言入参形参

--- a/算法心得.md
+++ b/算法心得.md
@@ -136,3 +136,11 @@ public dfs(int [] nums,int index,int [] temp){
   dfs(nums,index+1,temp); // 不选择当前元素
 }
 ```
+
+
+## c语言入参和形参
+
+在学习861的时候，偶然翻出自己之前的代码，c语言这方面我现在完全不懂了，需要重新开始学，这里就遇到了一个入参和形参的问题。
+记得没错的话，当入参传入的是值的话，入参的改变和形参是毫无关系的，但是当入参传入一个地址的时候，并且修改当前入参地址的里面的值的时候，形参会随之改变。
+
+当我们传入数组p的时候，我们其实传入的是p的首地址，也就是&p[0]。后面动态修改数组也是默认*p，所以形参数组也会跟着改变。
