--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -17,6 +17,18 @@ tags:
 
 * 人工智能对与任何问题都由上面的三层结构组成，其中导致最终输出的准确性则是层与层之间的比重(权值)决定。
 (这里会出现权重如何更新的问题)
+
+那么我们到底是如何通过这三层结构准确的解决问题的呢？
+
+> 参考这篇文章 https://zhuanlan.zhihu.com/p/44398148
+
 * 我们的深度学习简单来说通过大量的数据训练将比重修改成一个近似完美的值
+
+## 如何训练我们的人工智能
+
+我们知道根据计算我们的成本函数（或者说是损失函数）来估算我们的权值设置是否合理。
+
+通过利用Eloss函数对前面的权值w和偏置b进行不断地学习修改，最终让我们的Eloss得到一个极值，近似为0。那么我们的输出和真实值就得到了一个近似拟合。
+
 
 
