--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -30,5 +30,11 @@ tags:
 
 通过利用Eloss函数对前面的权值w和偏置b进行不断地学习修改，最终让我们的Eloss得到一个极值，近似为0。那么我们的输出和真实值就得到了一个近似拟合。
 
+## 过拟合
 
+我们如果过分的对训练数据进行训练。可能会导致一些实验数据的效果反而会下降，这种情况就是过拟合。
 
+### 如何避免过拟合
+* 我们可以通过对某些神经元进行漏失，也就是抛弃某些节点，重新调整我们的神经元结构。
+* 尽早的终止我们的训练次数，没必要降低J函数到0左右。
+* 利用动量，其实就是我们不是通过负梯度来训练我们的bp，如果我们在某次进入了一个局部最小值(他不是最小，而是局部最小)，但是，程序认为这是一个最优解,这样我们永远获到达不了最小，从而我们的训练有误。这里我们利用动量，虽然我们的训练效果可能变低，但是我们可以很好的避免这种情况。
