--- a/编程语言/c/指针.md
+++ b/编程语言/c/指针.md
@@ -1,5 +1,7 @@
 # 指针
 
+[指针参考博客](https://zhuanlan.zhihu.com/p/89481530)
+
 ## 字符串指针
 [参考博客](https://blog.csdn.net/daiyutage/article/details/8604720)
 ### 指针传入形参并且使用
@@ -17,3 +19,6 @@
 ```
 
 ### 关于二重指针的问题
+
+
+二级指针个人理解是用来修改指针或者数组的地址的。正常fun(int *p)用来修改只能值传递的变量，或者是fun(int a[])修改
