--- a/计算机基础/数据结构/算法心得.md
+++ b/计算机基础/数据结构/算法心得.md
@@ -101,6 +101,8 @@ public int recursion(int a){
 
 并且只要能递归，就一定能转化成迭代，无非就是压栈的操作让我们手动模拟了而已。
 
+[深入了解递归和动态规划的博客](https://blog.dotcpp.com/a/79100)
+
 ## 求子集算法(回溯)
 
 此题是leetcode 1886。
@@ -125,6 +127,9 @@ public dfs(int [] nums,int index,int [] temp){
   dfs(nums,index+1,temp); // 不选择当前元素
 }
 ```
+
+
+
 
 ## c语言入参和形参
 
