--- a/编程语言/c/字符串.md
+++ b/编程语言/c/字符串.md
@@ -6,7 +6,7 @@
 
 ## substring分割字符串
 
-这里使用的是<string.h>里面的strncp函数，具体使用示例：
+这里使用的是<string.h>里面的strncpy函数，具体使用示例：
 ```c
 char buff[1024];
 char * outstr = buff;
@@ -17,6 +17,16 @@ strncpy(outstr,istr,size);
 
 * 上面有两个知识点：
     * 指针必须要保证自己的地址是可以访问并且修改的，如果outstr没有指向buff这一可用内存，那么outstr可能是0x000这种不可修改内存，那么strncpy将无法访问
-    * strncpy无法自动给outstr输入结束符'\0',所以需要手动输入
+    * **strncpy无法自动给outstr输入结束符'\0',所以需要手动输入**
 
 > substr是C++里面的函数，C并没有
+
+
+## 字符串赋值
+
+c语言不像java那种可以直接char s[n] = p;
+我们需要调用函数strcpy(dest,source);
+
+## 判断相等
+
+不能像java使用==操作符,需要使用strcmp函数
