--- a/人工智能/神经网络.md
+++ b/人工智能/神经网络.md
@@ -2,3 +2,7 @@
 [前馈神经网络博客](https://www.cnblogs.com/lugendary/p/16088570.html#%E5%89%8D%E9%A6%88%E7%BD%91%E7%BB%9C)
 ## 激活函数
  相当于神经元有部分激活 来验证某一单一性特征
+
+## 网络结构
+
+### 前馈神经网络 
