使用github逻辑保存图片

--- a/人工智能/强度学习心得笔记.md
+++ b/人工智能/强度学习心得笔记.md
@@ -1,3 +1,11 @@
 # 强度学习心得
 
 
+## 未来收益之和Reward概念的理解
+
+强化学习讲究要让我们的每一步action收益(reward)最大，这里的reward是针对于未来说的。我现在还不知道未来的情况是啥，但是我需要计算从我现在这一步St到我结束的全部受益。
+
+
+## tensorflow 
+
+[python中__call()__函数和TensorFlow中call（）函数的区别](https://blog.csdn.net/dream_to_dream/article/details/115295662)
