--- a/编程随笔/树莓派的一档子事儿.md
+++ b/编程随笔/树莓派的一档子事儿.md
@@ -16,7 +16,9 @@
 
 ## 准备启动
 
-写入分区之后，直接插到家里的路由器LAN口上，打开后台管理，查看一下上网列表 [![sapfaR.png](https://s3.ax1x.com/2021/01/14/sapfaR.png)](/imgs/sapfaR.png)
+--- 
+
+写入分区之后，直接插到家里的路由器LAN口上，打开后台管理，查看一下上网列表 ![](/imgs/sapfaR.png)
 
 > 不用这个也可以，用ipscan扫一下网段Ip就行，主要是确定树莓派的Ip
 
