--- a/人工智能/强度学习心得笔记.md
+++ b/人工智能/强度学习心得笔记.md
@@ -6,6 +6,16 @@
 强化学习讲究要让我们的每一步action收益(reward)最大，这里的reward是针对于未来说的。我现在还不知道未来的情况是啥，但是我需要计算从我现在这一步St到我结束的全部受益。
 
 
-## tensorflow 
+## tensorflow 实现
 
 [python中__call()__函数和TensorFlow中call（）函数的区别](https://blog.csdn.net/dream_to_dream/article/details/115295662)
+
+
+## 名词解释
+
+**advantage function**：Usually denoted as A(s,a), the Advantage function is a measure of how much is a certain action a good or bad decision given a certain state
+
+## 常见的算法
+
+![](../imgs/DRLAlogrithm.png)
+
