--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -31,3 +31,8 @@
 * 我们可以通过对某些神经元进行漏失，也就是抛弃某些节点，重新调整我们的神经元结构。
 * 尽早的终止我们的训练次数，没必要降低J函数到0左右。
 * 利用动量，其实就是我们不是通过负梯度来训练我们的bp，如果我们在某次进入了一个局部最小值(他不是最小，而是局部最小)，但是，程序认为这是一个最优解,这样我们永远获到达不了最小，从而我们的训练有误。这里我们利用动量，虽然我们的训练效果可能变低，但是我们可以很好的避免这种情况。
+
+
+### 为什么我们输入的数据是相互独立，不带有序列性的
+
+如果我们输入一个时序数据给正常的神经网络，那样训练结果会受到最近输入的训练数据影响
