--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -33,6 +33,21 @@
 * 利用动量，其实就是我们不是通过负梯度来训练我们的bp，如果我们在某次进入了一个局部最小值(他不是最小，而是局部最小)，但是，程序认为这是一个最优解,这样我们永远获到达不了最小，从而我们的训练有误。这里我们利用动量，虽然我们的训练效果可能变低，但是我们可以很好的避免这种情况。
 
 
-### 为什么我们输入的数据是相互独立，不带有序列性的
+## 为什么我们输入的数据是相互独立，不带有序列性的
 
 如果我们输入一个时序数据给正常的神经网络，那样训练结果会受到最近输入的训练数据影响
+
+
+## 激活函数
+ 相当于神经元有部分激活(人脑有在思考一件事的时候这么多神经元不可能都在工作) 来验证某一单一性特征
+
+
+## 标准化(standard)和归一化(normal)的区别
+[参考博客](https://blog.csdn.net/weixin_36604953/article/details/102652160)
+
+[前馈神经网络博客](https://www.cnblogs.com/lugendary/p/16088570.html#%E5%89%8D%E9%A6%88%E7%BD%91%E7%BB%9C)
+
+
+## tensorflow 实现
+
+[python中__call()__函数和TensorFlow中call()函数的区别](https://blog.csdn.net/dream_to_dream/article/details/115295662)
