--- a/人工智能/强度学习心得笔记.md
+++ b/人工智能/强度学习心得笔记.md
@@ -5,11 +5,37 @@
 
 强化学习讲究要让我们的每一步action收益(reward)最大，这里的reward是针对于未来说的。我现在还不知道未来的情况是啥，但是我需要计算从我现在这一步St到我结束的全部受益。
 
+G_{t}(s)=R_{t+1} + \gamma R_{t+2} + \gamma ^{2}  R_{t+2} + \cdots +\gamma ^{T-1}  R_{T}
+
+
+## 马尔科夫决策中的名词解释
+[如何理解Q(s,a)和V(s)](https://zhuanlan.zhihu.com/p/109498587)
 
 ## 函数更新策略
 > MC算法和TD算法
 
 [参考博客](https://zhuanlan.zhihu.com/p/94464246)
+
+### MC 算法
+
+MC的核心思想就是大数定理中，样本的平均值等于期望值
+
+因为强化学习大部分是model free的，即我们不知道状态转移概率和具体价值。所以我们主要目的就是通过一个策略去最大化求E(Q(s,a))。
+
+mc提出，如果我们在采样数足够大 **(在或者不再同一个eposide)** 的情况下，总是能碰到相同的情况，即相同的状态S。
+
+所以 V(s)可以近似为所有采样中 V(s)的平均值
+
+所以如参考博客上面讲的那样，最后的Q(s,a) = Q(s,a) + 1/k **(当前所有相同样本的个数)** (G(t) - Q(s,a))
+
+> 在实际代码中，MC是在每一个eposide 更新一次，和后面的PG算法差不多
+
+### TD算法
+
+![](/imgs/mc&td.png)
+TD算法是MC算法的一次优化，公式区别如上图所示，其中他R(t+1)是St(A=at)的回报。MC算法是因为需要知道G(t)的值，所以需要整个eposide才能进行参数更新。
+而td算法则表示，只要知道到达下一个状态的reward值和下一个状态的V就可以完成一次参数更新。
+
 
 
 ## 名词解释
