--- a/人工智能/强度学习心得笔记.md
+++ b/人工智能/强度学习心得笔记.md
@@ -65,4 +65,18 @@ DQN的核心公式是：(rt+maxaQ(st+1,a;θ−)−Q(st,at;θ))2 ，其中θ- 是
 
 上面的那个参考博客说的很好，就像一个狗在尝试转圈咬到自己的尾巴一样。
 
+### 解决Target Network更新问题
+
+![](./../imgs/target-network.png)
+
+
+## AC算法
+
+
+![](/imgs/AC.png)
+
+![](/imgs/AC_vs_PG_2.png)
+
+
+## DDPG算法
 
