--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -33,6 +33,10 @@
 * 利用动量，其实就是我们不是通过负梯度来训练我们的bp，如果我们在某次进入了一个局部最小值(他不是最小，而是局部最小)，但是，程序认为这是一个最优解,这样我们永远获到达不了最小，从而我们的训练有误。这里我们利用动量，虽然我们的训练效果可能变低，但是我们可以很好的避免这种情况。
 
 
+### 为什么说 Dropout可以避免过拟合
+
+对于某个神经元来说，某次训练时，它的某些输入在dropout的作用下被过滤了。而在下一次训练时，又有不同的某些输入被过滤。经过多次训练后，某些输入被过滤，某些输入被保留。这样，该神经元就不会受某个输入非常大的影响而被均匀化了。即对应的权重w不会很大。从效果上来说与L2 regularization是类似的，都是对权重w进行“惩罚”，减小了w的值。
+
 ## 为什么我们输入的数据是相互独立，不带有序列性的
 
 如果我们输入一个时序数据给正常的神经网络，那样训练结果会受到最近输入的训练数据影响
