--- a/人工智能/深度学习心得笔记.md
+++ b/人工智能/深度学习心得笔记.md
@@ -55,3 +55,7 @@
 ## tensorflow 实现
 
 [python中__call()__函数和TensorFlow中call()函数的区别](https://blog.csdn.net/dream_to_dream/article/details/115295662)
+
+## RNN和LSTM相比
+
+RNN(GRU)和LSTM都是解决长期记忆网络的梯度消失问题，但是RNN计算量小效果好
