--- a/人工智能/常见的损失函数.md
+++ b/人工智能/常见的损失函数.md
@@ -6,3 +6,13 @@
 可以去参考强化学习中的Policy gradient
 公式如下图所示：
 ![](../imgs/损失函数cc.png)
+
+
+## infoNCE loss
+![](https://img2023.cnblogs.com/blog/2286223/202308/2286223-20230811175717512-2118812649.png)
+这个loss是想让正样本更接近，负样本更远离
+是一个对比学习的思想
+
+## BCE loss
+
+一般用来作为二分类任务
